--- a/LittleRockProperties1.html
+++ b/LittleRockProperties1.html
@@ -31,6 +31,7 @@
             align-items: center;
             position: fixed;
             left: 0;
+            top: 0;
             z-index: 1000;
         }
         .header-buttons a {
@@ -43,23 +44,18 @@
             color: #ddd;
         }
         section {
-            margin-top: 90px;
+            padding-top: 70px; /* Adjusted to ensure content is not hidden behind the fixed header */
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
-            justify-content: space-evenly;
         }
         .property {
-            position: relative;
             border: 1px solid #ddd;
             border-radius: 5px;
             background-color: #fff;
             padding: 10px;
             transition: box-shadow 0.3s ease;
             cursor: pointer;
-        }
-        .property:hover {
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .property img {
             width: 100%;
@@ -70,39 +66,6 @@
         }
         .property-info {
             display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 80%;
-            max-width: 400px;
-            padding: 20px;
-            background-color: rgba(255, 255, 255, 0.95);
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-            z-index: 1050;
-        }
-        .property:hover .property-info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-        .property-info h2, .property-info p, .property-info a {
-            margin: 10px 0;
-        }
-        .property-info a {
-            width: auto;
-            padding: 10px 20px;
-            color: #fff;
-            background-color: #333;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        .property-info a:hover {
-            background-color: #555;
         }
         .page-links {
             text-align: center;
@@ -112,6 +75,26 @@
             margin: 0 5px;
             color: #333;
             text-decoration: none;
+        }
+        /* Overlay styles */
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 1050;
+            justify-content: center;
+            align-items: center;
+        }
+        .overlay-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 500px;
         }
     </style>
 </head>
@@ -126,37 +109,19 @@
     <div class="container">
         <section>
             <!-- Property 1 -->
-            <div class="property" onclick="togglePropertyInfo(this)">
+            <div class="property" onclick="showOverlay('property1-info')">
                 <img src="PropertyPics/DowntownLittleRockBNB1Landing.webp" alt="Property 1">
-                <div class="property-info">
-                    <h2>Property 1</h2>
-                    <p>Location: Property 1 Location</p>
-                    <p>Price: $X</p>
-                    <p>More information about Property 1.</p>
-                    <a href="Properties/property1.html">See More</a>
-                </div>
+                <p>Click for details</p>
             </div>
             <!-- Property 2 -->
-            <div class="property" onclick="togglePropertyInfo(this)">
+            <div class="property" onclick="showOverlay('property2-info')">
                 <img src="PropertyPics/DowntownLittleRockBNB2Landing.webp" alt="Property 2">
-                <div class="property-info">
-                    <h2>Property 2</h2>
-                    <p>Location: Property 2 Location</p>
-                    <p>Price: $Y</p>
-                    <p>More information about Property 2.</p>
-                    <a href="Properties/property2.html">See More</a>
-                </div>
+                <p>Click for details</p>
             </div>
             <!-- Property 3 -->
-            <div class="property" onclick="togglePropertyInfo(this)">
+            <div class="property" onclick="showOverlay('property3-info')">
                 <img src="PropertyPics/DowntownLittleRockBNB3Landing.webp" alt="Property 3">
-                <div class="property-info">
-                    <h2>Property 3</h2>
-                    <p>Location: Property 3 Location</p>
-                    <p>Price: $Z</p>
-                    <p>More information about Property 3.</p>
-                    <a href="https://www.vrbo.com/4657269ha">VRBO</a>
-                </div>
+                <p>Click for details</p>
             </div>
         </section>
         <div class="page-links">
@@ -165,23 +130,45 @@
             <a href="LittleRockProperties3.html">3</a>
         </div>
     </div>
+    <!-- Overlays -->
+    <div id="property1-info" class="overlay" onclick="hideOverlay('property1-info')">
+        <div class="overlay-content">
+            <h2>Property 1</h2>
+            <p>Location: Downtown Little Rock</p>
+            <p>Price: $X</p>
+            <p>More information about Property 1.</p>
+            <a href="Properties/property1.html">See More</a>
+        </div>
+    </div>
+    <div id="property2-info" class="overlay" onclick="hideOverlay('property2-info')">
+        <div class="overlay-content">
+            <h2>Property 2</h2>
+            <p>Location: Downtown Little Rock</p>
+            <p>Price: $Y</p>
+            <p>More information about Property 2.</p>
+            <a href="Properties/property2.html">See More</a>
+        </div>
+    </div>
+    <div id="property3-info" class="overlay" onclick="hideOverlay('property3-info')">
+        <div class="overlay-content">
+            <h2>Property 3</h2>
+            <p>Location: Downtown Little Rock</p>
+            <p>Price: $Z</p>
+            <p>More information about Property 3.</p>
+            <a href="https://www.vrbo.com/4657269ha">VRBO</a>
+        </div>
+    </div>
     <script>
-        function togglePropertyInfo(property) {
-            property.classList.toggle('active');
-            adjustFooterMargin();
+        function showOverlay(id) {
+            document.getElementById(id).style.display = 'flex';
         }
-        function adjustFooterMargin() {
-            // Placeholder for footer adjustment if needed.
+        function hideOverlay(id) {
+            document.getElementById(id).style.display = 'none';
         }
+        // Close overlay when clicking outside of it
         window.onclick = function(event) {
-            if (!event.target.matches('.property')) {
-                var popups = document.getElementsByClassName("property-info");
-                for (var i = 0; i < popups.length; i++) {
-                    var openPopup = popups[i];
-                    if (openPopup.style.display == "flex") {
-                        openPopup.style.display = "none";
-                    }
-                }
+            if (event.target.classList.contains('overlay')) {
+                event.target.style.display = 'none';
             }
         };
     </script>
